some small spacing bug fixes

--- a/src/About.scss
+++ b/src/About.scss
@@ -48,14 +48,11 @@
       }
       h2 {
         color: var(--text-color);
-        padding: 1rem 0rem;
+        padding: 1rem 0rem 0rem 0rem;
 
         @include screen-is(lg) {
-          padding: 0rem;
+          padding: 0rem 0rem 1.5rem 0rem;
         }
-      }
-      h2:first-of-type {
-        padding-bottom: 1.5rem;
       }
 
       img {
