--- a/src/Projects.scss
+++ b/src/Projects.scss
@@ -27,7 +27,6 @@
       display: block;
       width: 100%;
       height: 5rem;
-      margin-bottom: 2rem;
       border-bottom: 4px solid var(--border-color);      
     }
 
@@ -63,6 +62,12 @@
     transition: all 0.2s ease;
   }
 
+  .project-title {
+    @include screen-is(lg) {
+      margin: 2rem 0rem;
+    }
+  }
+
   .project-details {
     color: var(--text-color);
 
@@ -71,7 +76,7 @@
       grid-template-columns: 40% 1fr;
       grid-template-rows: 1fr;
       gap: 2rem;
-      margin: 5rem 0rem;
+      margin: 1.5rem 0rem;
     }
   }
 
@@ -109,7 +114,7 @@
           display: flex;
           flex-flow: column nowrap;
 
-          .project-title {
+          .project-link {
             font-weight: bolder;
             text-decoration: underline 2px;
             padding: 1rem 0rem;
@@ -117,9 +122,6 @@
     
           .project-description {
             padding: 1rem 0rem;
-          }
-          h2 {
-            color: var(--text-color);
           }
     
           ul {
